implemented 3 layer neural network

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,8 @@
 /imgs/
 /XteDrivingImages.npy
+/XteDrivingImageNames.npy
 /XtrDrivingImages.npy
 /YtrDrivingLabels.npy
+/submission.csv
+.idea
+/venv/
