2 slightly diff DNN models (one with PCA, one without)

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,8 @@
 /submission.csv
 .idea
 /venv/
+/76x76_reaching_back.png
+/76x76_woman_on_phone.png
+/ClassPredictions.npy
+/DNN_PCA_Predictions.csv
+/DNN_Predictions.csv
